--- a/noxen/index.html
+++ b/noxen/index.html
@@ -79,15 +79,7 @@
 
               <!-- <li><a href="contact.html" class="nav-link">Contacto</a></li> -->
               <li><a href="TiendaOnline/catalogo.php" nav-link">Catálogo</a></li>
-              <a href="logout.php"><img src="images/salir.jpg" width="50" height="55"></a>
-
-
-
-            
-
-
-
-
+              <!--<a href="logout.php"><img src="images/salir.jpg" width="50" height="55"></a>-->
             </ul>
           </nav>
 
